--- a/Frontend/myapp/package.json
+++ b/Frontend/myapp/package.json
@@ -6,8 +6,13 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "joi": "^17.12.1",
+    "joi-browser": "^13.4.0",
+    "joi-image-extension": "^1.0.0",
     "react": "^18.2.0",
+    "react-axios": "^2.0.6",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
